# chirplab

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml  type-check.yml
src/chirplab/: __init__.py  constants.py  interferometer.py  likelihood.py  logging.py  prior.py  waveform.py
src/chirplab/data/: README.md
src/chirplab/inference/: __init__.py  distribution.py  likelihood.py  pool.py  prior.py  results.py  sampler.py
src/chirplab/inference/sampler/: __init__.py  base.py  dynesty.py
src/chirplab/simulation/: __init__.py  grid.py  interferometer.py  parameters.py  waveform.py
src/chirplab/simulation/data/: README.md
tests/: __init__.py  conftest.py  test_interferometer.py  test_likelihood.py  test_logging.py  test_prior.py  test_waveform.py
tests/inference/: __init__.py  conftest.py  test_distribution.py  test_likelihood.py  test_pool.py  test_prior.py  test_results.py  test_sampler.py
tests/inference/sampler/: __init__.py  test_base.py  test_dynesty.py
tests/simulation/: __init__.py  conftest.py  test_grid.py  test_interferometer.py  test_parameters.py  test_waveform.py
typings/: README.md
typings/dynesty/: __init__.pyi  bounding.pyi  dynesty.pyi  internal_samplers.pyi  plotting.pyi  pool.pyi  results.pyi  sampler.pyi  utils.pyi
