[project]
name = "chirplab"
version = "0.1.0"
description = "Parameter estimation of gravitational-wave signals."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 120
lint.select = [
    "B",        # flake8-bugbear
    "EM",       # flake8-errmsg
    "PT",       # flake8-pytest-style
    "SIM",      # flake8-simplify
    "TC",       # flake8-type-checking
    "I",        # isort
    "N",        # pep8-naming
    "PERF",     # Perflint
    "E", "W",   # pycodestyle
    "D",        # pydocstyle
    "UP",       # pyupgrade
]
lint.ignore = [
    # formatting conflicts
    # pycodestyle
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    # pydocstyle
    "D206",
    "D300",
    # flake8-quotes
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    # flake8-commas
    "COM812",
    "COM819",
    # flake8-implicit-str-concat
    "ISC002",
]
lint.pycodestyle.max-doc-length = 120
lint.pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # flake8-simplify
    "SIM300",
    # Pylint Refactor
    "PLR2004",
]

[tool.mypy]
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_bytes = true
extra_checks = true

[tool.coverage.report]
exclude_also = [
    "@abstractmethod",
]
